--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Message App</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <h2>Message App</h2>
-  <div id="history"></div>
-  <input type="text" id="message" placeholder="Type your message here..." />
-  <button id="sendBtn">Send</button>
+<body class="bg-light">
+  <div class="container py-4">
+
+    <!-- Header with switch -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="mb-0">Message App</h2>
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="validateSwitch">
+        <label class="form-check-label" for="validateSwitch">Validate Input</label>
+      </div>
+    </div>
+
+    <!-- Message history box -->
+    <div class="card mb-3">
+      <div class="card-body overflow-auto" id="history" style="height: 300px;"></div>
+    </div>
+
+    <!-- Input form -->
+    <form class="d-flex gap-2" onsubmit="return false;">
+      <input type="text" class="form-control" id="message" placeholder="Type your message here..." />
+      <button class="btn btn-primary" id="sendBtn">Send</button>
+    </form>
+
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
