--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <body class="bg-light">
   <div class="container py-4">
 
+        <!-- Service Availability Notice -->
+    <div class="alert alert-warning small d-flex align-items-center mb-4" role="alert">
+      <svg xmlns="http://www.w3.org/2000/svg" class="me-2" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M8.982 1.566a1.5 1.5 0 0 0-2.964 0L.165 13.233A1.5 1.5 0 0 0 1.5 15h13a1.5 1.5 0 0 0 1.335-2.767L8.982 1.566zm-1.528.874a.5.5 0 0 1 .92 0l5.853 11.667a.5.5 0 0 1-.447.733H2.192a.5.5 0 0 1-.447-.733L7.454 2.44zM8 5c-.535 0-.954.462-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 5zm.002 6a1 1 0 1 0-.002 2 1 1 0 0 0 .002-2z"/>
+      </svg>
+      <div>
+        <strong>Service Availability Notice:</strong><br />
+        Please note that this service is a demonstration version and is unavailable during nighttime hours
+        <strong>(21:00 - 07:00 CET)</strong> or on weekends.<br />
+        We appreciate your understanding and apologise for any inconvenience this may cause.
+      </div>
+    </div>
+
+    
+
     <!-- Header with switch -->
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 class="mb-0">Message App</h2>
@@ -21,7 +36,7 @@
 
     <!-- Message history box -->
     <div class="card mb-3">
-      <div class="card-body overflow-auto" id="history" style="height: 300px;"></div>
+      <div class="card-body overflow-auto" id="history" style="height: 500px;"></div>
     </div>
 
     <!-- Input form -->
