--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
 
     <!-- Header with switch -->
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="mb-0">Message App</h2>
+      <h2 class="mb-0">
+        Chatbot with AI
+  <span 
+    class="ms-2"
+    data-bs-toggle="tooltip"
+    data-bs-placement="right"
+    title="This page offers a comprehensive overview of a proof-of-concept chat application that integrates with AI governance services for AI-powered conversations and input validation. The application serves as a functional example of implementing secure chat interfaces with real-time AI responses and optional malicious content detection.
+The AI-powered bot simulates a sales support process for the coffee machine store.
+The application provides optional input validation through AI governance service security features. Users can toggle validation using the Validate checkbox, which affects both the request payload and the user interface feedback.
+When the Validate checkbox is enabled, it displays validation status messages through the AI governance service. It detects malicious content and shows the message 'Malicious intent detected!' if a user attempts to overwrite the AI prompt or inject malicious settings."
+  >
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#6c757d" class="bi bi-info-circle" viewBox="0 0 16 16">
+  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2"/>
+</svg>
+  </span>
+</h2>
+
       <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" id="validateSwitch">
-        <label class="form-check-label" for="validateSwitch">Validate Input</label>
+        <input class="form-check-input big-switch" type="checkbox" id="validateSwitch">
+        <label class="form-check-label fs-5" for="validateSwitch">Validate Input</label>
       </div>
     </div>
 
