--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Message App</title>
+  <title>Chatbot with AI App</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
+<nav class="navbar navbar-light bg-white mb-4">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Chatbot with AI</a>
+    <a class="btn btn-outline-secondary" href="about.html">About</a>
+  </div>
+</nav>
 <body class="bg-light">
   <div class="container py-4">
 
-        <!-- Service Availability Notice -->
+    <!-- Service Availability Notice -->
     <div class="alert alert-warning small d-flex align-items-center mb-4" role="alert">
-      <svg xmlns="http://www.w3.org/2000/svg" class="me-2" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M8.982 1.566a1.5 1.5 0 0 0-2.964 0L.165 13.233A1.5 1.5 0 0 0 1.5 15h13a1.5 1.5 0 0 0 1.335-2.767L8.982 1.566zm-1.528.874a.5.5 0 0 1 .92 0l5.853 11.667a.5.5 0 0 1-.447.733H2.192a.5.5 0 0 1-.447-.733L7.454 2.44zM8 5c-.535 0-.954.462-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 5zm.002 6a1 1 0 1 0-.002 2 1 1 0 0 0 .002-2z"/>
+      <svg xmlns="http://www.w3.org/2000/svg" class="me-2" width="20" height="20" fill="currentColor"
+        viewBox="0 0 16 16">
+        <path
+          d="M8.982 1.566a1.5 1.5 0 0 0-2.964 0L.165 13.233A1.5 1.5 0 0 0 1.5 15h13a1.5 1.5 0 0 0 1.335-2.767L8.982 1.566zm-1.528.874a.5.5 0 0 1 .92 0l5.853 11.667a.5.5 0 0 1-.447.733H2.192a.5.5 0 0 1-.447-.733L7.454 2.44zM8 5c-.535 0-.954.462-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 5zm.002 6a1 1 0 1 0-.002 2 1 1 0 0 0 .002-2z" />
       </svg>
       <div>
         <strong>Service Availability Notice:</strong><br />
@@ -23,26 +32,20 @@
       </div>
     </div>
 
-    
+
 
     <!-- Header with switch -->
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="mb-0">
+      <!-- <h2 class="mb-0">
         Chatbot with AI
-  <span 
-    class="ms-2"
-    data-bs-toggle="tooltip"
-    data-bs-placement="right"
-    title="This page offers a comprehensive overview of a proof-of-concept chat application that integrates with AI governance services for AI-powered conversations and input validation. The application serves as a functional example of implementing secure chat interfaces with real-time AI responses and optional malicious content detection.
-The AI-powered bot simulates a sales support process for the coffee machine store.
-The application provides optional input validation through AI governance service security features. Users can toggle validation using the Validate checkbox, which affects both the request payload and the user interface feedback.
-When the Validate checkbox is enabled, it displays validation status messages through the AI governance service. It detects malicious content and shows the message 'Malicious intent detected!' if a user attempts to overwrite the AI prompt or inject malicious settings."
-  >
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#6c757d" class="bi bi-info-circle" viewBox="0 0 16 16">
-  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2"/>
-</svg>
-  </span>
-</h2>
+        <a href="about.html" class="ms-2" title="Learn more about this chatbot">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#6c757d" class="bi bi-info-circle"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2" />
+          </svg>
+        </a>
+      </h2> -->
 
       <div class="form-check form-switch">
         <input class="form-check-input big-switch" type="checkbox" id="validateSwitch">
