--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CoffeeBot Chat</title>
+    <link rel="icon" type="image/svg" href="img/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -65,7 +66,7 @@
         <!-- Right: Info Panel -->
         <div class="right-panel">
             <div class="d-flex justify-content-end mb-4">
-                <img src="elasticio-logo.svg" alt="Elastic.io" style="height: 30px;">
+                <img src="img/elasticio-logo.svg" alt="Elastic.io" style="height: 30px;">
             </div>
 
             <p><strong>AI applications can be attacked and tricked into misbehaving.</strong> Take the CoffeeSalesBot on
@@ -91,7 +92,7 @@
                     a weird noise. What could be the cause?</li>
             </ol>
             <div class="d-flex justify-content-end">
-                <img src="link2ai-logo.png" alt="Link2AI" style="height: 80px;">
+                <img src="img/link2ai-logo.png" alt="Link2AI" style="height: 80px;">
             </div>
             <div class="form-check form-switch my-3">
                 <input class="form-check-input" type="checkbox" id="validateSwitch">
